--- a/Python Project 2 CDC Data.ipynb
+++ b/Python Project 2 CDC Data.ipynb
@@ -43,38 +43,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "69143cd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-74-3172e2df0836>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkind\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'bar'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'df2' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c4b85794",
    "metadata": {},
    "source": [
-    "### Data Wrangling & Cleaning"
+    "### Data Wrangling & Cleaning\n",
+    "**Read data from its's location and display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "id": "5a6154a5",
    "metadata": {},
    "outputs": [
@@ -287,15 +266,15 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "diabetic_data=pd.read_csv(\"diabetic_data.csv\",index_col=0)\n",
+    "diabetic_data=pd.read_csv(\"diabetic_data.csv\")\n",
     "\n",
-    "df.head()"
+    "diabetic_data.head()"
    ]
   },
   {
@@ -308,23 +287,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 93,
    "id": "1393fcf6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-53-b4f76aa3279d>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-53-b4f76aa3279d>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    diabetic_data['race’]=diabetic_data['Patient Race'].diff().fillna(0)\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0               Caucasian\n",
+       "1               Caucasian\n",
+       "2         AfricanAmerican\n",
+       "3               Caucasian\n",
+       "4               Caucasian\n",
+       "               ...       \n",
+       "101761    AfricanAmerican\n",
+       "101762    AfricanAmerican\n",
+       "101763          Caucasian\n",
+       "101764          Caucasian\n",
+       "101765          Caucasian\n",
+       "Name: race, Length: 101766, dtype: object"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "diabetic_data['Patient Age’]=diabetic_data[‘age'].diff().fillna(0)\n",
-    "diabetic_data['race’]=diabetic_data['Patient Race'].diff().fillna(0)\n",
-    "diabetic_data['gender’]=diabetic_data[‘Patient Gender’].diff().fillna(0)\n"
+    "\n",
+    "diabetic_data.rename({'race': 'Patient Race', 'gender': 'Patient Gender', 'age': 'Patient Age', 'weight':'Patient weight','diabetesMed': 'Is Patient on diabetes Meds?','time_in_hospital': 'Time In Hospital','insulin': 'Patient Insulin' },  axis=1, inplace=True)\n",
+    "diabetic_data\n"
    ]
   },
   {
@@ -332,7 +324,47 @@
    "id": "b4845d10",
    "metadata": {},
    "source": [
-    "*Filtering Data\n"
+    "### Filtering Data\n",
+    "* Show only colums I need \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b49397b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patient_stats = diabetic_data[[\"Patient Race\",\"Patient Gender\",\"Patient Age\",\"Is Patient on diabetes Meds?\", \"Time In Hospital\", \"Patient Insulin\"]]\n",
+    "patient_stats.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ef8eb55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(patient_stats.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5a3f4af",
+   "metadata": {},
+   "source": [
+    "### Data Aggregation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c9e39b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patient_stats.groupby(['Patient Race']).sum()"
    ]
   },
   {
@@ -1174,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 114,
    "id": "173e7638",
    "metadata": {},
    "outputs": [
@@ -1191,13 +1223,21 @@
        "Name: age, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.groupby([\"race\"]) ['age'].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21d80478",
+   "metadata": {},
+   "source": [
+    "#### Females had the highest rate of readmittance"
    ]
   },
   {
@@ -1269,17 +1309,21 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cda76ef8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "df2 = patient_stats(np.random.rand(10, 4), columns=[\"Patient Race\",\"Patient Gender\",\"Patient Age\",\"Is Patient on diabetes Meds?\", \"Time In Hospital\", \"Patient Insulin\"])\n",
+    "\n",
+    "df2.plot.bar();"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "7abef77f",
    "metadata": {},
-   "source": [
-    "#### Females have the highest rate of being readmitted"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1314,35 +1358,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "5222de5c",
+   "cell_type": "markdown",
+   "id": "85c056f9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "age\n",
-       "[0-10)        161\n",
-       "[10-20)       691\n",
-       "[20-30)      1657\n",
-       "[30-40)      3775\n",
-       "[40-50)      9685\n",
-       "[50-60)     17256\n",
-       "[60-70)     22483\n",
-       "[70-80)     26068\n",
-       "[80-90)     17197\n",
-       "[90-100)     2793\n",
-       "Name: gender, dtype: int64"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "age.count()"
+    "age.count()\n",
+    "* Ages 0-10 had the lowest rate of diabetes & 70 - 80 the highest\n"
    ]
   },
   {
@@ -1999,6 +2020,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "14678a9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels=patient_stats.index\n",
+    "colors=['yellow', 'red', 'orange', 'navy', 'pink', 'green', 'brown']\n",
+    "patient_stats.plot.pie(y='Time In Hospital’, labels=labels,figsize=(8, 6), colors=colors)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04d4bb31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patient_stats.plot.bar(stacked=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "18ce540d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'patient_stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-aec3c8cda94e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpatient_stats\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Patient Race\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Patient Gender\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Patient Age\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Is Patient on diabetes Meds?\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Time In Hospital\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Patient Insulin\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'patient_stats' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = patient_stats(np.random.rand(10, 4), columns=[\"Patient Race\",\"Patient Gender\",\"Patient Age\",\"Is Patient on diabetes Meds?\", \"Time In Hospital\", \"Patient Insulin\"])\n",
+    "\n",
+    "df2.plot.bar();"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "id": "16a4735b",
    "metadata": {},
@@ -2338,6 +2406,14 @@
     "corr =df.corr()\n",
     "corr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e14da35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2790,20 +2866,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "f0c1910c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-47a3b5a38dc3>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-32-47a3b5a38dc3>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    df.isnull.().any()\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "diabetic_data.plot.barh(stacked=True);"
+   ]
   },
   {
    "cell_type": "code",
